--- a/sensors/template/cx_sensors.yaml
+++ b/sensors/template/cx_sensors.yaml
@@ -6,8 +6,8 @@
     # Operating Mode (Text Conversion)
     # ------------------------------------------------------------------------
 
-    - name: "CX Operating Mode"
-      unique_id: cx_operating_mode_text
+    - name: "Heat Pump Operating Mode"
+      unique_id: "heat_pump_operating_mode"
       state: >-
         {% set mode = states('sensor.cx50_operating_mode') | int(0) %}
         {% if mode == 0 %}Cool
@@ -18,26 +18,43 @@
         {% else %}Unknown
         {% endif %}
 
+    - name: "Heat Pump Inlet Temperature"
+      unique_id: heat_pump_inlet_temperature
+      unit_of_measurement: "°F"
+      state_class: measurement
+      icon: mdi:thermometer
+      state: >
+        {% set inlet = states('sensor.cx50_inlet_water_temp_c') | float(0) %}
+        {{ (inlet * 1.8 + 32.0) | round(2) }}
+
+    - name: "Heat Pump Outlet Temperature"
+      unique_id: heat_pump_outlet_temperature
+      unit_of_measurement: "°F"
+      state_class: measurement
+      icon: mdi:thermometer
+      state: >
+        {% set outlet = states('sensor.cx50_outlet_water_temp_c')  | float(0) %}
+        {{ (outlet * 1.8 + 32.0) | round(2) }}
+
     # ------------------------------------------------------------------------
     # Temperature Delta (ΔT) - CORRECTED
     # ------------------------------------------------------------------------
-
-    - name: "CX Water Temperature Delta"
-      unique_id: cx_water_temp_delta_celsius
-      unit_of_measurement: "°C"
+    - name: "Heat Pump Delta T"
+      unique_id: heat_pump_delta_t
+      unit_of_measurement: "°F"
       state_class: measurement
       icon: mdi:delta
       state: >
-        {% set inlet = states('sensor.cx50_inlet_water_temp_c') | float(0) %}
-        {% set outlet = states('sensor.cx50_outlet_water_temp_c') | float(0) %}
-        {{ (outlet - inlet) | round(2) }}
+        {% set inlet = states('sensor.heat_pump_inlet_temperature') | float(0) %}
+        {% set outlet = states('sensor.heat_pump_outlet_temperature')  | float(0) %}
+        {{ ( outlet - inlet ) | round(2) }}
 
     # ------------------------------------------------------------------------
     # Electrical Power Input - CORRECTED (V × I)
     # ------------------------------------------------------------------------
 
-    - name: "CX Electrical Power Input"
-      unique_id: cx_electrical_power_input
+    - name: "Heat Pump Electrical Power Input"
+      unique_id: heat_pump_electrical_power_input
       unit_of_measurement: "W"
       device_class: power
       state_class: measurement
@@ -50,8 +67,8 @@
         {{ states('sensor.cx50_input_ac_voltage') not in ['unknown', 'unavailable']
             and states('sensor.cx50_input_ac_current') not in ['unknown', 'unavailable'] }}
 
-    - name: "CX Electrical Power Input kW"
-      unique_id: cx_electrical_power_input_kw
+    - name: "Heat Pump Electrical Power Input kW"
+      unique_id: heat_pump_electrical_power_input_kw
       unit_of_measurement: "kW"
       device_class: power
       state_class: measurement
@@ -64,8 +81,8 @@
     # Compressor Speed (Percentage) - CORRECTED
     # ------------------------------------------------------------------------
 
-    - name: "CX Compressor Speed"
-      unique_id: cx_compressor_speed_pct
+    - name: "Heat Pump Compressor Speed"
+      unique_id: heat_pump_compressor_speed
       unit_of_measurement: "%"
       state_class: measurement
       state: >-
@@ -78,8 +95,8 @@
     # Fan Speed (Average) - CORRECTED (divide by 10 for tenths of percent)
     # ------------------------------------------------------------------------
 
-    - name: "CX Fan Speed"
-      unique_id: cx_fan_speed_pct
+    - name: "Heat Pump Fan Speed"
+      unique_id: heat_pump_fan_speed_pct
       unit_of_measurement: "%"
       state_class: measurement
       state: >-
@@ -94,8 +111,8 @@
     # Formula: Q = ṁ × Cp × ΔT
     # ------------------------------------------------------------------------
 
-    - name: "CX Thermal Power Output"
-      unique_id: cx_thermal_power_output
+    - name: "Heat Pump Thermal Power Output"
+      unique_id: heat_pump_thermal_power_output
       unit_of_measurement: "W"
       device_class: power
       state_class: measurement
@@ -118,8 +135,8 @@
             and states('sensor.cx50_outlet_water_temp_c') not in ['unknown', 'unavailable']
             and states('sensor.cx50_pump_flow_lpm') not in ['unknown', 'unavailable'] }}
 
-    - name: "CX Thermal Power Output kW"
-      unique_id: cx_thermal_power_output_kw
+    - name: "Heat Pump Thermal Power Output kW"
+      unique_id: heat_pump_thermal_power_output_kw
       unit_of_measurement: "kW"
       device_class: power
       state_class: measurement
@@ -133,8 +150,8 @@
     # Formula: COP = Thermal Power Output / Electrical Power Input
     # ------------------------------------------------------------------------
 
-    - name: "CX COP"
-      unique_id: cx_cop
+    - name: "Heat Pump COP"
+      unique_id: heat_pump_cop
       state_class: measurement
       icon: mdi:gauge
       state: >-
@@ -153,8 +170,8 @@
     # COP by Operating Mode
     # ------------------------------------------------------------------------
 
-    - name: "CX COP Heating"
-      unique_id: cx_cop_heating
+    - name: "Heat Pump COP Heating"
+      unique_id: heat_pump_cop_heating
       state_class: measurement
       icon: mdi:fire
       state: >
@@ -166,8 +183,8 @@
           unavailable
         {% endif %}
 
-    - name: "CX COP Cooling"
-      unique_id: cx_cop_cooling
+    - name: "Heat Pump COP Cooling"
+      unique_id: heat_pump_cop_cooling
       state_class: measurement
       icon: mdi:snowflake
       state: >
@@ -179,8 +196,8 @@
           unavailable
         {% endif %}
 
-    - name: "CX COP DHW"
-      unique_id: cx_cop_dhw
+    - name: "Heat Pump COP DHW"
+      unique_id: heat_pump_cop_dhw
       state_class: measurement
       icon: mdi:water-boiler
       state: >
@@ -196,8 +213,8 @@
     # Efficiency Rating (Human-readable)
     # ------------------------------------------------------------------------
 
-    - name: "CX Efficiency Rating"
-      unique_id: cx_efficiency_rating
+    - name: "Heat Pump Efficiency Rating"
+      unique_id: heat_pump_efficiency_rating
       state: >
         {% set cop = states('sensor.cx_cop') | float(0) %}
         {% if cop >= 4.5 %}
